--- a/.env.dev
+++ b/.env.dev
@@ -1,5 +1,6 @@
 DEBUG=1
 SECRET_KEY=achopik_test
+DJANGO_SETTINGS_MODULE = project.settings
 DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 0.0.0.0 [::1]
 SQL_ENGINE=django.db.backends.postgresql
 SQL_DATABASE=training
@@ -8,3 +9,4 @@ SQL_PASSWORD=trainee1
 SQL_HOST=db
 SQL_PORT=5432
 DATABASE=postgres
+JWT_EXP_DAYS=7
