--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,7 @@ djangorestframework-simplejwt = "*"
 celery = "*"
 redis = "*"
 pytest-django = "*"
+mixer = "*"
 
 [requires]
 python_version = "3.8"
