--- a/tox.ini
+++ b/tox.ini
@@ -8,5 +8,5 @@ max-line-length = 88
 extend-ignore = E203, W503
 
 [pytest]
-addopts = --rootdir sources/ --create-db
+addopts = --rootdir sources/ --reuse-db --create-db
 python_files = tests.py test_*.py *_tests.py
