--- a/tox.ini
+++ b/tox.ini
@@ -3,10 +3,12 @@ exclude =
     .git,
     __pycache__,
     migrations
+    test_*.py
+    *_test.py
 max-complexity = 10
 max-line-length = 88
 extend-ignore = E203, W503
 
 [pytest]
-addopts = --rootdir sources/ --reuse-db --create-db
+addopts = --rootdir sources/ --create-db
 python_files = tests.py test_*.py *_tests.py
