--- a/.env.dev
+++ b/.env.dev
@@ -1,6 +1,6 @@
 DEBUG=1
 SECRET_KEY=achopik_test
-DJANGO_SETTINGS_MODULE = project.settings
+DJANGO_SETTINGS_MODULE=core.settings
 DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 0.0.0.0 [::1]
 SQL_ENGINE=django.db.backends.postgresql
 SQL_DATABASE=training
