--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
   web:
     build: .
     entrypoint: "/usr/src/app/entrypoint.sh"
-    command: python sources/manage.py runserver 0.0.0.0:8000
+    command: python trading_service/manage.py runserver 0.0.0.0:8000
     container_name: web
     volumes:
       - .:/usr/src/app/
@@ -31,7 +31,7 @@ services:
 
   celery:
     build: .
-    command: celery --workdir sources/ -A project worker -B --scheduler django -l INFO -f celery_log.txt
+    command: celery --workdir trading_service/ -A core worker -B --scheduler django -l INFO -f celery_log.txt
     env_file:
       - ./.env.dev
     volumes:
