--- a/tox.ini
+++ b/tox.ini
@@ -10,5 +10,5 @@ max-line-length = 88
 extend-ignore = E203, W503
 
 [pytest]
-addopts = --rootdir sources/ --create-db
+addopts = --rootdir trading_service/ --create-db
 python_files = tests.py test_*.py *_tests.py
