Moved files related to service

--- a/trading_service/docker-compose.yml
+++ b/trading_service/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   db:
     image: postgres:12.0-alpine
     volumes:
-      - ./postgres_data:/var/lib/postgresql/data/
+      - ../postgres_data:/var/lib/postgresql/data/
     restart: on-failure
 
   redis:
@@ -17,7 +17,7 @@ services:
   web:
     build: .
     entrypoint: "/usr/src/app/entrypoint.sh"
-    command: python trading_service/manage.py runserver 0.0.0.0:8000
+    command: python manage.py runserver 0.0.0.0:8000
     container_name: web
     volumes:
       - .:/usr/src/app/
@@ -31,7 +31,7 @@ services:
 
   celery:
     build: .
-    command: celery --workdir trading_service/ -A core worker -B --scheduler django -l INFO -f celery_log.txt
+    command: celery -A core worker -B --scheduler django -l INFO -f celery_log.txt
     env_file:
       - ./.env.dev
     volumes:
