--- a/trading_service/docker-compose.yml
+++ b/trading_service/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     image: "redis:alpine"
     hostname: "redis"
     depends_on:
-      - db
+      - web
     restart: on-failure
 
   web:
@@ -38,5 +38,4 @@ services:
       - .:/usr/src/app/
     depends_on:
       - web
-      - db
     restart: on-failure
