--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   db:
     image: postgres:12.0-alpine
     volumes:
-      - ../postgres_data:/var/lib/postgresql/data/
+      - ./postgres_data:/var/lib/postgresql/data/
     restart: on-failure
 
   redis:
@@ -32,5 +32,5 @@ services:
     volumes:
       - .:/usr/src/app/
     depends_on:
-      - web
+      - db
     restart: on-failure
