--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,11 +26,11 @@ services:
 
   celery:
     build: ./trading_service
-    command: celery -A core worker -B --scheduler django -l INFO -f celery_log.txt
+    entrypoint: celery -A core worker -B --scheduler django -l INFO -f celery_log.txt
     env_file:
       - ./.env.dev
     volumes:
       - .:/usr/src/app/
     depends_on:
-      - db
+      - web
     restart: on-failure
