Created registration and email confirmation system

--- a/.env.dev
+++ b/.env.dev
@@ -10,3 +10,7 @@ SQL_HOST=db
 SQL_PORT=5432
 DATABASE=postgres
 JWT_EXP_DAYS=7
+EMAIL_HOST=smtp.gmail.com
+EMAIL_HOST_USER=training.service.noreply@gmail.com
+EMAIL_HOST_PASSWORD=trainee01
+EMAIL_PORT=587
