Fixed staticfiles collection

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -6,6 +6,10 @@ server {
   location / {
     try_files $uri @proxy_to_app;
   }
+  location /static {
+    autoindex on;
+    alias /media/static/;
+  }
 
 
   location @proxy_to_app {
