--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,5 +46,6 @@ services:
       - "80:80"
     volumes:
       - ./nginx:/etc/nginx/conf.d
+      - ./trading_service/staticfiles:/media/static/
     depends_on:
       - app
